- update jib to use distroless base image image - add empty liquibase migration changelog - create basic configuration and controller code